# chatty

backend/: Cargo.toml
frontend/: bun.lockb
