[package]
name = "chatty-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["all"] }
tokio-stream = "0.1.14"
warp = "0.3.5"
serde = { "1.0.188", features = ["derive"] }
